##### Mon 15/10/2012
* New command report_dfg_path
      search and reports all the paths (IO/FF -> IO/FF) from a certain IO/FF to all/certain IO/FF.
* New command extract_regg
      generate a flattened register DFG from the hierarchical DFG
      it will be used to detect all FFs who has self-control loops (potential FSM)
* add capability in SDFG library to store paths, and search paths from a specified starting point
* regulate all printed informations using error No., so they can be suppressed by user
* remove cppPNML library from master branch

##### Sat 29/09/2012
* Nodes without output edges are removed (cross module boundry removal!)

##### Wed 26/09/2012
* New command uniquify
*     make sure all entities have a unique module
*     it is called automatically by extract_sdfg
* New tool: tool/sdfg2pdf
*     display the extracted DFG graph in pdf files

##### Sat 22/09/2012
* New command extract_sdfg
*     extract synchronous data-flow graph SDFG from a module
*     remove cppPNML library as TCPN is not used in the near future
*     add pugixml library back as a parser for the sdfg file

##### Thu 19/07/2012
* Merge dev back to master.
* Remove all parameters in the wriiten out netlist.
* Range reduction finished. No obvious effect in or1200 design.

##### Wed 18/07/2012
* Fixed several small bugs in display.
* The replacing of pre-lists to in-order expressions is finished.

##### Mon 16/07/2012
* Big change in expression and operation. Replace the pre-order equation list to in-order tree.
  It is a pain to handle pre-order list in stream and reduce.

##### Sun 15/07/2012
* Support width calculation in ranges.

##### Sat 14/07/2012
* width support in Netlist::Range and Netlist::RangeArray.
* Add get_width() and set_width() methods to all netlist components.

##### Fri 13/07/2012
* Fixed a bug in cpptcl which allow Tcl:interpreter to be used as a global object.

##### Thu 12/07/2012
* Merge dev back to master.