@@ -1,3 +1,8 @@
+##### Fri 19/10/2012
+* New command report_fsm 
+      search and report the FSMs in this design    
+* Now the output/input paths of each register is searched only once and stored in the graph to reduce running time
+
 ##### Mon 15/10/2012
 * New command report_dfg_path
       search and reports all the paths (IO/FF -> IO/FF) from a certain IO/FF to all/certain IO/FF.
